--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -15,10 +15,28 @@
       <h1><a href='/'>Snippetbox</a></h1>
     </header>
     <nav>
-      <a href='/'>Home</a>
-      <a href='/snippet/create'>Create Snippet</a>
+      <div>
+        <a href='/'>Home</a>
+        {{if .AuthenticatedUser}} 
+          <a href='/snippet/create'>Create Snippet</a>
+        {{end}}  
+      </div>
+      <div>
+        {{if .AuthenticatedUser}} 
+        <form action='/user/logout' method='POST'>
+          <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
+          <button>Logout ({{.AuthenticatedUser.Name}})</button>
+        </form>
+        {{else}}
+        <a href='/user/signup'>Signup</a>
+        <a href='/user/login'>Login</a>
+        {{end}}
+      </div>
     </nav>
     <section>
+      {{with .Flash}}
+        <div class='flash'>{{.}}</div>
+      {{end}}
       {{template "body" .}}
     </section>
     {{template "footer" .}}
